test/domains/claridge/sparseStridableQuery.good
sparseStridableQuery.chpl:3: error: sparse domains do not currently support .stridable
